# pygramm

./: LICENSE.md  README.md  __init__.py  antlr.lark  biased_choice.py  binary_choice.py  char_classes.py  choicebot.py  config.py  demo_gen.py  generator.py  glade_fix.py  grammar.py  grammar_bias.py  grammar_prune.py  lex.py  llparse.py  llparse_antlr.py  pyproject.toml  requirements.txt  tox.ini  unit_productions.py
data/: flex.gram  gram-wf-original-glade.txt  sqlite_pruned.txt  unseq.txt  with_comments.txt  xml-antlr.g4  xml-pruned.txt  xml_official.gram
doc/: HOWTO-package.md  budget.md  project-structure.md
scripts/: context.py  demo_gen.py  glade_fix.py  latexify.py
src/: __init__.py  antlr.lark  biased_choice.py  binary_choice.py  char_classes.py  generator.py  grammar_bias.py  grammar_prune.py  llparse.py
src/pygramm/: antlr.lark  antlr_gramm.py  biased_choice.py  char_classes.py  config.py  grammar.py  lex.py  llparse.py  unit_productions.py
src/tests/: JSON.g4  bibtex.g4  choicebot.py  context.py  simple_gen.py  simplest.g4  test_parse_antlr.py
test/: choicebot.py  context.py  simple_gen.py  test_parse_antlr.py
