[project]
name = "pygramm"
version = "0.0.3"
authors = [{ name="Michal Young", email="michal@cs.uoregon.edu"},
    { name="Ziyad Alsaeed", email="zalsaeed@qu.edu.sa"}
]
description = "Grammar library specialized for generating phrases (e.g., in fuzzing)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lark",
    "pyyaml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/uo-se-research/pygramm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"